src/objects/sma__MAWaypoint__c.object
<CustomObject>
    <fields>
        <fullName>sma__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MapAnything Waypoints</relationshipLabel>
        <relationshipName>MapAnything_Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__AdditionalData__c</fullName>
        <label>Additional Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Object Lookup</label>
        <referenceTo>sma__MABaseObject__c</referenceTo>
        <relationshipLabel>MapAnything Waypoints</relationshipLabel>
        <relationshipName>Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__BaseObject__c</fullName>
        <label>Base Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>MapAnything Waypoints</relationshipLabel>
        <relationshipName>MapAnything_Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MapAnything Waypoints</relationshipLabel>
        <relationshipName>MapAnything_Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__EventId__c</fullName>
        <label>EventId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__HasAddress__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Has Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__IsFlexible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Flexible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>MapAnything Waypoints</relationshipLabel>
        <relationshipName>MapAnything_Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__LinkId__c</fullName>
        <label>Link Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MASavedQry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Saved Query</label>
        <referenceTo>sma__MASavedQry__c</referenceTo>
        <relationshipLabel>Waypoints</relationshipLabel>
        <relationshipName>Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MapAnything Waypoints</relationshipLabel>
        <relationshipName>MapAnything_Waypoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Options__c</fullName>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Route__c</fullName>
        <label>Route</label>
        <referenceTo>sma__MARoute__c</referenceTo>
        <relationshipLabel>Waypoints</relationshipLabel>
        <relationshipName>Waypoints</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sma__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MapAnything Waypoint</label>
    <nameField>
        <label>Waypoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Waypoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>